<resources>
    <string name="app_name">Food Ship</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="signup">Sign up</string>

    <string name="signin">Sign in</string>

    <string name="call">Call</string>

</resources>
